; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/common/osi/extr_osi.c_osi_init.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/common/osi/extr_osi.c_osi_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @osi_init() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %2 = call i64 (...) @osi_mutex_global_init()
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  store i32 -1, i32* %1, align 4
  br label %5

5:                                                ; preds = %4, %0
  %6 = load i32, i32* %1, align 4
  ret i32 %6
}

declare dso_local i64 @osi_mutex_global_init(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
